Delete Eclipse Collections.