@@ -6,18 +6,15 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.Executors;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
-import org.eclipse.collections.api.list.ImmutableList;
-import org.eclipse.collections.impl.block.factory.Procedures;
-import org.eclipse.collections.impl.collector.Collectors2;
-import org.eclipse.collections.impl.factory.Lists;
-import org.eclipse.collections.impl.factory.Maps;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -49,12 +46,12 @@ public final class DocToEpub {
     private static Config conf;
 
     /** 記事名一覧. */
-    private static ImmutableList<Path> articles;
+    private static List<Path> articles;
     static {
         try {
             conf = new Config(Defines.CONFIG);
             articlePath = conf.get(Key.ARTICLE_DIR);
-            articles = Files.list(Paths.get(articlePath)).collect(Collectors2.toImmutableList());
+            articles = Files.list(Paths.get(articlePath)).collect(Collectors.toList());
         } catch (final IOException e) {
             e.printStackTrace();
         }
@@ -77,7 +74,7 @@ public final class DocToEpub {
      * @param fileNames names of json file
      */
     public static void run(final String[] fileNames) {
-        run(Lists.immutable.of(fileNames));
+        run(Arrays.asList(fileNames));
     }
 
     /**
@@ -85,12 +82,15 @@ public final class DocToEpub {
      * @param fileNames names of json file
      */
     public static void run(final Iterable<String> args) {
-        args.forEach(Procedures.throwing(json ->
-            run(Files.readAllLines(Paths.get(json))
-                    .stream()
-                    .collect(Collectors.joining(Strings.LINE_SEPARATOR)))
-            )
-        );
+        args.forEach(json -> {
+			try {
+				run(Files.readAllLines(Paths.get(json))
+				        .stream()
+				        .collect(Collectors.joining(Strings.LINE_SEPARATOR)));
+			} catch (final IOException e) {
+				e.printStackTrace();
+			}
+		});
         clean();
     }
 
@@ -141,9 +141,9 @@ public final class DocToEpub {
             final String  prefix,
             final boolean recursive
         ) {
-        final List<Path> targets = articles.asParallel(Executors.newFixedThreadPool(20), 20)
-                .select(path -> path.getFileName().toString().startsWith(Articles.titleToFileName(prefix)))
-                .toList();
+        final List<Path> targets = articles.stream()
+                .filter(path -> path.getFileName().toString().startsWith(Articles.titleToFileName(prefix)))
+                .collect(Collectors.toList());
         if (recursive) {
             final List<Path> recursiveFiles = new ArrayList<>();
             targets.forEach(path ->{
@@ -210,14 +210,11 @@ public final class DocToEpub {
             final String style = layout.equals(PageLayout.VERTICAL)
                     ? EpubDefine.STYLESHEET_VERTICAL
                     : EpubDefine.STYLESHEET_HORIZONTAL;
-            final String convertedSource = Articles.bindArgs(
-                    Resource.TEMPLATE,
-                    Maps.mutable.of(
-                            "title", title,
-                            "content", content.toString(),
-                            "stylesheet", style
-                            )
-            );
+            final Map<String, String> map = new HashMap<>();
+            map.put("title", title);
+            map.put("content", content.toString());
+            map.put("stylesheet", style);
+            final String convertedSource = Articles.bindArgs(Resource.TEMPLATE, map);
             // img
             final Set<String> imgs = converter.latestImagePaths;
             imgs.parallelStream().filter(p -> Files.exists(Paths.get(imageDir + p))).forEach(p -> {
